@@ -1,6 +1,9 @@
 15/03/2009: v2.3.2
         - added Turkish translation and hints (thanks to Cem Uykun)
 	- added Greek translation and hints (thanks to Ilias Makris)
+	- added more meaning to autosave filenames (user, country etc.)
+	- added W-L-D and cup round robin rank info to the next opponent view
+	- added possibility to edit player names
 
 29/01/2009: v2.3.1
 	- added possibility for multiple tables in leagues (think
